add ptdf sensi ampere support
Signed-off-by: CHEN Roxane <roxane.chen@rte-france.com>